--- a/NoteApplication.csproj
+++ b/NoteApplication.csproj
@@ -4,7 +4,20 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>View\icons8_book_96_EDe_icon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>2</WarningLevel>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="View\icons8_book_96_EDe_icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="View\icons8_book_96_EDe_icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.9.1" />
